@@ -1,3 +1,8 @@
+2006-07-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/management/MemoryPoolMXBean.java:
+	New file.
+	
 2006-07-03  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/javax/crypto/RSACipherImpl.java: Source formatting.
